Refactored database and track list classes
Changed:
- Track data is now cached in database rather than loaded from spotify
servers each time app is opened. Greatly reduces loading time and allows
for offline use.
- Syncing with spotify can now be done by tapping a button on the main
screen
- Sync is performed automatically when app is opened for the very first
time
- SourceTrackData heavily refactored, is now a singleton and has new
methods for caching/loading track data
- DownloadTrackDataTask renamed to SyncTrackDataTask, also heavily
refactored to perform new syncing functionality
- Boolean change flags have been removed from Tags
- EditTagActivity no longer returns a result, changes are made directly
from the dialog
- TableRatings renamed to TableTracks, additional columns added
- Other minor tweaks to database table structure
- Database version is now stored in sharedprefs
- Some framework started for playlist generation, to be fully added in
next commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="title_activity_edittags">Edit Tags</string>
     <string name="title_activity_editgenres">Edit Genre Tags</string>
     <string name="title_activity_editmoods">Edit Mood Tags</string>
+    <string name="title_activity_createplaylist">Create Smart Playlist</string>
 
     <string name="action_settings">Settings</string>
 
@@ -17,6 +18,7 @@
     <string name="desc_deletetag">Delete tag</string>
     <string name="desc_next">Next</string>
     <string name="desc_newtag">New tag</string>
+    <string name="desc_newlist">New playlist</string>
 
     <string name="placeholder_songtitle">Song Title</string>
     <string name="placeholder_artist">Artist</string>
@@ -28,13 +30,20 @@
     <string name="button_editmood">EDIT MOOD TAGS</string>
     <string name="button_cancelchanges">CANCEL CHANGES</string>
     <string name="button_savechanges">SAVE CHANGES</string>
+    <string name="button_continue">CONTINUE</string>
 
     <string name="tag_expanded">expanded</string>
     <string name="tag_collapsed">collapsed</string>
 
     <string name="txt_createtag">Create new tag</string>
     <string name="txt_manage">Manage Saved Tracks</string>
-    <string name="desc_newlist">New playlist</string>
     <string name="txt_newplaylist">New Smart Playlist</string>
     <string name="txt_playlists">PLAYLISTS</string>
+    <string name="txt_include">Include</string>
+    <string name="txt_exclude">Exclude</string>
+    <string name="txt_allmatching">all songs matching:</string>
+    <string name="txt_and">and</string>
+    <string name="txt_createfilter">Create new filter</string>
+    <string name="desc_sync">Sync</string>
+    <string name="txt_sync">Sync with Spotify</string>
 </resources>
