User interface tweaks and updates
Changed:
- Tested app on different display sizes, adjusted UI to be more
consistent and clean
- More consistent style/size of UI objects throughout app
- List of criteria in playlist generation dialog now uses custom adapter
& custom list items
- Other misc UI tweaks

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,8 @@
     <string name="txt_createfilter">Create new filter</string>
     <string name="desc_sync">Sync</string>
     <string name="txt_sync">Sync with Spotify</string>
+    <string name="desc_includeexclude">Include or exclude</string>
+    <string name="placeholder_filter">(filter text)</string>
+    <string name="desc_deletefilter">Delete filter</string>
+    <string name="desc_editfilter">Edit filter</string>
 </resources>
